overwrote with master contents

--- a/expert-net-mockup-1/main.css
+++ b/expert-net-mockup-1/main.css
@@ -39,51 +39,16 @@
     border-bottom: 1px solid #dbdbdb;
 }
 
-.neighborhood-guides h1 {
+.neighborhood-guides h2 {
     color: #393c3d;
     font-size: 24px;
 }
 
-.neighborhood-guides h3 {
+.neighborhood-guides p {
     font-size: 15px;
     margin-bottom: 13px;
-
 }
 
-.neighborhood-guides .container .row .col-md-5 .location {
-    border: 1px solid #000;
-    margin-left: 65px;
-    margin-right: 60px;
-}
-
-.neighborhood-guides .container .row .col-md-5 .contact {
-    border: 1px solid #000;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 65px;
-    margin-right: 60px;
-}
-
-.neighborhood-guides .container .row .col-md-4 .name {
-    border: 2px solid #000;
-    margin: 20px;
-}
-
-.neighborhood-guides .container .row .col-md-4 .position {
-    border: 1px solid #000;
-    margin: 20px;
-}
-
-
-.neighborhood-guides .container .row .col-md-4 .skills-expertise {
-    border: 1px solid #000;
-    margin: 20px;
-}
-
-.neighborhood-guides .container .row .col-md-4 .bibliography {
-    border: 1px solid #000;
-    margin: 20px;
-}
 
 
 .learn-more {
