--- a/expert-net-mockup-1/templates/index.html
+++ b/expert-net-mockup-1/templates/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="nav">
       <div class="container">
-        <ul class="pull-left">
+        <ul class="pull-left">s
           <li><a href="#">Home</a></li>
           <li><a href="#">Search </a></li>
         </ul>
@@ -57,7 +57,7 @@
 
                 <div class="col-md-4">
                     <div class="name">
-                      <h2>Name: ________ </h2>
+                      <h2>Name: {{ fullname }} </h2>
                     </div>
                     <div class="position">
                         <h3>Position:</h3>
@@ -68,8 +68,12 @@
                         <p>________</p>
                     </div>
                     <div class="skills-expertise">
-                      <h3>________ knows about....</h3>
-                      <p> ________</p>
+                      <h3> {{ firstname }} knows about....</h3>
+                      <ul>
+                        {% for skill in skills %}
+                          <li> {{ skill }} </li>
+                        {% endfor %}
+                      </ul>
                     </div>
 
                     <div class="bibliography">
