--- a/expert-net-mockup-1/templates/index.html
+++ b/expert-net-mockup-1/templates/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="nav">
       <div class="container">
-        <ul class="pull-left">s
+        <ul class="pull-left">
           <li><a href="#">Home</a></li>
           <li><a href="#">Search </a></li>
         </ul>
@@ -32,7 +32,6 @@
       </div>
     </div> -->
     
-    
     <div class="neighborhood-guides">
         <div class="container">
             <div class="row">
@@ -43,16 +42,24 @@
                     </div>
 
                     <div class="location">
-                        <h3>Current location: </h3>
-                        <p> {{ location.city}}, {{ location.state }} </p>
+                        <h3>&nbsp;Current location: </h3>
+                        <p> &nbsp;{{ location.city}}, {{ location.state }} </p>
                     </div>
                     <div class="contact">
-                        <h3>Contact &nbsp; {{ contact.phone }}: </h3>
-                        <p>Phone:</p>
-                        <p>E-mail: ________</p>
-                        <p>Twitter: ________</p>
-                        <p>LinkedIn: ________</p>
-                        <p> + other sources ..?? </p>
+                        <h3>&nbsp;Contact {{ firstname }}: </h3>
+                        <p> &nbsp;<strong>Phone:</strong> {{ contact.phone }} </p>
+                        <p> &nbsp;<strong>E-mail:</strong> {{ contact.email }} </p>
+
+                        <h3>&nbsp; {{ firstname }}'s Links: </h3>
+                        <p> &nbsp;<strong> {{ contact.linkedin }} </strong> </p>
+                        <p> &nbsp;<strong> {{ contact.facebook }} </strong> </p>
+                        <p> &nbsp;<strong> {{ contact.twitter }} </strong> </p>
+                        <p> &nbsp;<strong> {{ contact.github }} </strong> </p>
+<!-- 
+                        <p> &nbsp;<strong>LinkedIn:</strong> {{ contact.linkedin }} </p>
+                        <p> &nbsp;<strong>Facebook:</strong> {{ contact.facebook }} </p>
+                        <p> &nbsp;<strong>Github:</strong> {{ contact.github }} </p> -->
+                        <p> &nbsp; + other sources ..? </p>
                     </div>
                 </div>
 
@@ -61,12 +68,14 @@
                       <h2>&nbsp; {{ fullname }} </h2>
                     </div>
                     <div class="position">
-                        <h3>Position:</h3>
-                        <p>________ </p>
-                        <h3>Department:</h3>
-                        <p>________</p>
-                        <h3>School:</h3>
-                        <p>________</p>
+                        <h3> &nbsp;<strong>Position:</strong> </h3>
+                        <p> &nbsp;{{ position }} </p>
+                        <h3> &nbsp;<strong>Department:</strong> </h3>
+                        <p> &nbsp;{{ department }} </p>
+                        <h3> &nbsp;<strong>School:</strong></h3>
+                        <p> &nbsp;{{ school }} </p>
+                        <h3> &nbsp;<strong>Institution:</strong></h3>
+                        <p> &nbsp;{{ institution }} </p>
                     </div>
                     <div class="skills-expertise">
                       <h3>&nbsp;{{ firstname }} knows about....</h3>
@@ -89,6 +98,8 @@
             </div>
         </div>
     </div>
+
+
 
     <div class="learn-more">
 	  <div class="container">
