--- a/expert-net-mockup-1/templates/index.html
+++ b/expert-net-mockup-1/templates/index.html
@@ -49,7 +49,7 @@
                         <h3>&nbsp;Contact {{ firstname }}: </h3>
                         <p> &nbsp;<strong>Phone:</strong> {{ contact.phone }} </p>
                         <p> &nbsp;<strong>E-mail:</strong> {{ contact.email }} </p>
-
+                        <p> </p>
                         <h3>&nbsp; {{ firstname }}'s Links: </h3>
                         <p> &nbsp;<strong> {{ contact.linkedin }} </strong> </p>
                         <p> &nbsp;<strong> {{ contact.facebook }} </strong> </p>
@@ -59,7 +59,7 @@
                         <p> &nbsp;<strong>LinkedIn:</strong> {{ contact.linkedin }} </p>
                         <p> &nbsp;<strong>Facebook:</strong> {{ contact.facebook }} </p>
                         <p> &nbsp;<strong>Github:</strong> {{ contact.github }} </p> -->
-                        <p> &nbsp; + other sources ..? </p>
+                        <p> &nbsp; + other sources ..?? </p>
                     </div>
                 </div>
 
@@ -99,30 +99,31 @@
         </div>
     </div>
 
-
-
     <div class="learn-more">
 	  <div class="container">
 		<div class="row">
-	      <div class="col-md-4">
+	      <div class="col-md-3">
 			<h3>About the project:</h3>
-			<p>Insert project description.</p>
-			<p><a href="#">Insert link</a></p>
+			<p> <i>ExpertNet</i> is a tool developed by The Governance Lab for matching NYU's cutting-edge interdisciplinary research and applied research methodologies with the demand from external organizations, namely government agencies, to solve public problems.</p>
+<!-- 			<p><a href="#">Insert link</a></p> -->
 	      </div>
 <!-- 		  <div class="col-md-4">
 			<h3>Host</h3>
 			<p>Renting out your unused space could pay your bills or fund your next vacation.</p>
 			<p><a href="#">Learn more about hosting</a></p>
 		  </div> -->
-	      <div class="col-md-4">
+        <div class="col-md-1">
+          <p> </p>
+        </div>
+
+	      <div class="col-md-3">
 			   <h3>Created by:</h3>
           <div class="thumbnail-logo">
-            <img src="https://github.com/hcutler/GovLab_OpenNYU/blob/master/images/govlab-logo-2.png?raw=true" width="160" height="40" alt="GovLab logo">
-          </div>
-    		<p><a href="http://thegovlab.org/">Learn about GovLab</a></p>
+            <a href="http://thegovlab.org/"><img src="https://github.com/hcutler/GovLab_OpenNYU/blob/master/images/govlab-logo-2.png?raw=true" width="160" height="40" alt="Link to GovLab homepage"></a> 
 		  </div>
 	    </div>
 	  </div>
 	</div>
+
   </body>
 </html>
