--- a/expert-net-mockup-1/main.css
+++ b/expert-net-mockup-1/main.css
@@ -22,7 +22,7 @@
   top:100px;
 }
 
-.jumbotron h1 {
+/*.jumbotron h1 {
   color: #0a;
   font-size: 48px;  
   font-family: 'Shift', sans-serif;
@@ -32,7 +32,7 @@
 .jumbotron p {
   font-size: 20px;
   color: #0a;
-}
+}*/
 
 .neighborhood-guides {
     background-color: #efefef;
@@ -88,6 +88,11 @@
 
 .learn-more {
   background-color: #f7f7f7;
+  margin: auto;
+  width: 70%;
+/*  border:3px solid #8AC007;*/
+  padding: 10px;
+
 }
 
 .learn-more h3 {
