--- a/expert-net-mockup-1/main.css
+++ b/expert-net-mockup-1/main.css
@@ -64,7 +64,7 @@
     margin-left: 65px;
     margin-right: 60px;
     border-radius: 10px;
-    padding: 90px 50px;
+/*    padding: 90px 50px;*/
 }
 
 .neighborhood-guides .container .row .col-md-4 .name {
@@ -110,4 +110,21 @@
 
 .learn-more a {
   color: #00b0ff;
+}
+
+.directory-title h1 {
+  color: #808080;
+  padding: 70px 10px;
+  margin-top: 10px;
+  margin-bottom: -20px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.people-list ul li {
+  margin-left: auto;
+  margin-right: auto;
+  list-style: none;
+  padding-left: 40%;
 }
