--- a/expert-net-mockup-1/templates/links.html
+++ b/expert-net-mockup-1/templates/links.html
@@ -109,12 +109,14 @@
 		</ul>
 	</div>
 
-	<div class="col-md-3">
-		<h3>Created by:</h3>
-        <div class="thumbnail-logo">
-            <a href="http://thegovlab.org/"><img src="https://github.com/hcutler/GovLab_OpenNYU/blob/master/images/govlab-logo-2.png?raw=true" width="160" height="40" alt="Link to GovLab homepage"></a> 
+	<div class="landing-logo">
+		<div class="col-md-3">
+			<h3>Created by:</h3>
+	        <div class="thumbnail-logo">
+	            <a href="http://thegovlab.org/"><img src="https://github.com/hcutler/GovLab_OpenNYU/blob/master/images/govlab-logo-2.png?raw=true" width="160" height="40" alt="Link to GovLab homepage"></a> 
+			</div>
 		</div>
-	</div>
+  	</div>
   </body>
 
 </html>
