--- a/expert-net-mockup-1/output/main.css
+++ b/expert-net-mockup-1/output/main.css
@@ -108,11 +108,10 @@
   font-weight: bold;
 }
 
-.landing-logo .col-md-4 h3 {
+.landing-logo .col-md-3 h3 {
   background-color: #f7f7f7;
   margin: auto;
-  width: 70%;
-  padding: 10px;
+  padding-right: 80%;
   font-family: 'Shift', sans-serif;
   font-size: 18px;
   font-weight: bold;
