fixed logo and links stuff

--- a/expert-net-mockup-1/main.css
+++ b/expert-net-mockup-1/main.css
@@ -108,10 +108,14 @@
   font-weight: bold;
 }
 
-.landing-logo .col-md-3 h3 {
-  background-color: #f7f7f7;
+.container .row .landing-logo .col-md-3 h3 {
+/*  background-color: #f7f7f7;*/
+  float:left;
   margin: auto;
-  padding-right: 80%;
+  width: 100%;
+  padding: 10px;
+  padding-right:100px;
+  position: bottom;
   font-family: 'Shift', sans-serif;
   font-size: 18px;
   font-weight: bold;
