--- a/expert-net-mockup-1/templates/index.html
+++ b/expert-net-mockup-1/templates/index.html
@@ -14,7 +14,7 @@
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
-          <li><a href="links.html#home_people_list">Home</a></li>
+          <li><a href="table-contents.html">Home</a></li>
           <li><a href="#">Search </a></li>
         </ul>
         <ul class="pull-right">
@@ -66,7 +66,7 @@
 
                 <div class="col-md-4">
                     <div class="name">
-                      <h2 id="hannah_profile_link">&nbsp; {{ fullname }} </h2>
+                      <h2 id="{{ n }}">&nbsp; {{ fullname }} </h2>
                     </div>
                     <div class="position">
                         <h3> &nbsp;<strong>Position:</strong> </h3>
