--- a/expert-net-mockup-1/templates/index.html
+++ b/expert-net-mockup-1/templates/index.html
@@ -60,7 +60,7 @@
                         <p> &nbsp;<strong>LinkedIn:</strong> {{ contact.linkedin }} </p>
                         <p> &nbsp;<strong>Facebook:</strong> {{ contact.facebook }} </p>
                         <p> &nbsp;<strong>Github:</strong> {{ contact.github }} </p> -->
-                        <p> &nbsp;+ other sources ..?? </p>
+                        <!-- <p> &nbsp;+ other sources ..?? </p> -->
                     </div>
                 </div>
 
