--- a/expert-net-mockup-1/output/main.css
+++ b/expert-net-mockup-1/output/main.css
@@ -1,4 +1,4 @@
-.nav a {
+.nav1 a {
   color: #5a5a5a;
   font-size: 11px;
   font-weight: bold;
@@ -6,16 +6,21 @@
   text-transform: uppercase;
 }
 
-.nav li {
+.nav1 li {
   display: inline;
 }
 
-/*.jumbotron {
-  background-image:url('https://griffsgraphs.files.wordpress.com/2012/07/facebook-network.png');
-  height: 500px;
+.profile-content {
+  margin-top: 30px;
+
+}
+
+.jumbotron {
+  background-image:url('http://images.thegovlab.org/wordpress/wp-content/uploads/2014/01/expertnetworking.jpg');
+  height: 200px;
   background-repeat: no-repeat;
   background-size: cover;
-}*/
+}
 
 .jumbotron .container {
   position: relative;
@@ -147,6 +152,21 @@
   margin-left: auto;
   margin-right: auto;
   list-style: none;
-  padding-left: 40%;
+  border: 1px solid #808080;
+  width: 50%;
+}
+.container .search-box .light-table-filter {
+/*  padding-bottom: 10px;*/
+/*  margin-left: auto;
+  margin-right: auto;*/
+  text-align: center;
+  position: absolute;
+  top: 49%;
+  left: 45%;
+}
+
+/* Nav
+
+
 
 }
