--- a/expert-net-mockup-1/output/main.css
+++ b/expert-net-mockup-1/output/main.css
@@ -37,10 +37,15 @@
   color: #0a;
   font-size: 48px;  
   /*font-family: 'Lato';*/
-  font-family: 'Gloria Hallelujah';
+/*  font-family: 'Gloria Hallelujah';*/
   /*font-weight: bold;
   text-transform: uppercase;*/
 }
+
+.jumbotron .directory-title h1 {
+  font-family: 'Gloria Hallelujah';
+}
+
 
 .jumbotron p {
   font-size: 20px;
@@ -48,9 +53,25 @@
   text-transform: uppercase;
 }
 
+.about-project h3 {
+  color: #0a;
+  text-align: center;
+  font-family: 'Lato';
+}
+
+.about-project p {
+  color: #0a;
+  text-align: left;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: 'Lato';
+  padding-bottom: 18px;
+}
+
 .profile-content {
     background-color: #efefef
     border-bottom: 1px solid #dbdbdb;
+
 }
 
 .profile-content h3 {
@@ -95,7 +116,7 @@
     border: 2px solid #000;
     margin: 20px;
     border-radius: 10px;
-    font-family: 'Gloria Hallelujah';
+    font-family: 'Lato';
     text-align: center;
     text-transform: uppercase;
 
