--- a/expert-net-mockup-1/output/main.css
+++ b/expert-net-mockup-1/output/main.css
@@ -245,6 +245,12 @@
   font-family: 'Lato';
 }
 
+
+/*.data-pipeline img.center { 
+   display: block;
+    margin-left: auto;
+    margin-right: auto;
+}*/
 /* Nav
 
 
