--- a/expert-net-mockup-1/templates/links.html
+++ b/expert-net-mockup-1/templates/links.html
@@ -33,9 +33,9 @@
   </div>
 	
   <div class="directory-title">
-   		<h1 id="home_people_list">OPEN NYU Data Science Braintrust @ New York University
+   		<h1 id="home_people_list">ExpertNet People Directory
 
-      <h3 id="sub-header">ExpertNet People Directory
+      <h3 id="sub-header">
       </h3>
       <style>
       h3 {
